2007-02-03 Thomas Orgis <sobukus@sourcemage.org>
	* DETAILS, BUILD, INSTALL: bump to 0.9, switch to build api 2

2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
	* DETAILS: [automated] Removed UPDATED.

2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
	* DETAILS: [automated] Removed MAINTAINER.

2006-06-12 Arwed v. Merkatz <v.merkatz@gmx.net>
	* DETAILS: inserted BUILD_API=1 line

2006-03-12 Karsten Behrmann <BearPerson@sourcemage.org>
	* DETAILS: (automated) Add KEYWORDS

2005-11-29 Seth Woolley <seth@tautology.org>
	* DETAILS: MD5 -> SHA512

2003-03-29 Unet <unet@sourcemage.org>
	* Bumped to 0.8

2002-09-11 afrayedknot <afrayedknot@thefrayedknot.armory.com>
	* added spell to section.
