@@ -1,3 +1,6 @@
+2019-10-22 Ismael Luceno <ismael@iodev.co.uk>
+	* Makefile: normalized
+
 2007-02-03 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS, BUILD, INSTALL: bump to 0.9, switch to build api 2
 
